
2021-12-08  Ron Norman <rjn@inglenet.com>

	* codegen.c: When setting value into COMP-X field use cob_set_compx

2021-11-26  Ron Norman <rjn@inglenet.com>

	* field.c: More checks for USAGE on a group and if compatible
			with the elementary data field description

2021-11-18  Ron Norman <rjn@inglenet.com>

	* field.c: More work for OCCURS with multiple VALUES
	* codegen.c: More work for initialize of OCCURS with multiple VALUES

2021-11-15  Ron Norman <rjn@inglenet.com>

	* field.c (validate_elem_value): Accept multi VALUES for simple OCCURS
	* tree.h: Add flag_occurs_values to cb_field
	* codegen.c: Handle initialize of OCCURS with multiple VALUES

2021-11-14  Ron Norman <rjn@inglenet.com>

	* reserved.c: Add bit-wise words B-AND, B-NOT, B-OR, B-SHIFT-L, B-SHIFT-R
				B-XOR, B-SHIFT-LC, B-SHIFT-RC
	* parser.y: Add grammar for handling the BIT-WISE operations
	* typeck.c: Add checks for handling the BIT-WISE operations
	* tree.c: Add checks for handling the BIT-WISE operations
	* codegen.c: Add code emission for the BIT-WISE operations

2021-11-10  Ron Norman <rjn@inglenet.com>

	* cobc.c: Init cb_mf_files to 0
	* codegen.c: Add some exceptions for -std=cobol85
	* typeck.c: Add exception for -std=cobol85 for the COBOL85 tests

2021-11-09  Ron Norman <rjn@inglenet.com>

	* config.def: Added 'record-sequential-advancing' 
	* codegen.c: Is ORGANIZATION was not defined in SELECT but
				WRITE ADVANCING was used then default to LINE SEQUENTIAL
	* typeck.c: If ORGANIZATION not specific and WRITE ADVANCING default
				to LINE SEQUENTIAL based on 'record-sequential-advancing'
				

2021-11-08  Ron Norman <rjn@inglenet.com>

	* tree.h: Add for file flag_has_organization
	* codegen.c: Is ORGANIZATION was not defined in SELECT but
				WRITE ADVANCING was used then default to LINE SEQUENTIAL
				(This will soon become an option)
	* parser.y: Set flag flag_has_organization if ORGANIZATION was define
	* typeck.c: If ORGANIZATION not specific and WRITE ADVANCING default