@@ -2074,6 +2074,7 @@ cb_build_program (struct cb_program *last_program, const int nest_level)
 	}
 	cb_reset_78 ();
 	cobc_in_procedure = 0;
+	cobc_in_data_division = 0;
 	cobc_in_repository = 0;
 	cb_clear_real_field ();
 
